--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Install .NET Framework 4.0 Developer Pack
+      run: |
+        choco install netfx-4.0-devpack -y
+
     - name: Setup Visual Studio
       uses: microsoft/setup-msbuild@v1.1
       with:
