--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,11 @@ jobs:
       run: |
         choco install netfx-4.8.1-devpack -y
 
+    - name: Install Visual Studio components
+      run: |
+        # 安装 .NET Framework 4.0 相关组件
+        & "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vs_installer.exe" --add Microsoft.VisualStudio.Workload.ManagedDesktop --includeRecommended --quiet --wait
+
     - name: Setup Visual Studio
       uses: microsoft/setup-msbuild@v1.1
       with:
