--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,7 @@ jobs:
 
     - name: Build the project
       run: |
-        msbuild LaserGRBL.sln /p:Configuration=Release
-
-    - name: Build the project
-      run: |
-        dir /s /b
+        msbuild LaserGRBL.sln /p:Configuration=Release /p:OutputPath=bin
 
     - name: Create Release Package
       run: |
