--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,12 @@ jobs:
 
     - name: Build the project
       run: |
-        msbuild LaserGRBL.sln /p:Configuration=Release
+        msbuild LaserGRBL.sln /p:Configuration=Release /p:BaseOutputPath=.
 
     - name: Create Release Package
       run: |
         # 假设生成的文件在 bin/Release 目录下
         mkdir release
-        Get-ChildItem -Path "." -Recurse
         # 将生成的文件打包成 zip 文件
         Compress-Archive -Path 'bin\*' -DestinationPath 'release\package.zip'
 
