--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,14 @@ jobs:
 
     - name: Build the project
       run: |
-        msbuild LaserGRBL.sln /p:Configuration=Release /p:BaseOutputPath=.
+        msbuild LaserGRBL.sln /p:Configuration=Release
 
     - name: Create Release Package
       run: |
         # 假设生成的文件在 bin/Release 目录下
         mkdir release
         # 将生成的文件打包成 zip 文件
-        Compress-Archive -Path 'bin\*' -DestinationPath 'release\package.zip'
+        Compress-Archive -Path 'LaserGRBL\bin\*' -DestinationPath 'release\package.zip'
 
     - name: Create Release
       id: create_release
