--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Build the project
       run: |
-        msbuild LaserGRBL.sln /p:Configuration=Release /p:BaseOutputPath=${{ github.workspace }}\bin
+        msbuild LaserGRBL.sln /p:Configuration=Release /p:OutputPath=${{ github.workspace }}\bin
 
     - name: Create Release Package
       run: |
